@@ -21,7 +21,7 @@ public class PageManagerTest extends TestCase
     public void setUp()
         throws Exception
     {
-        props.load( getClass().getClassLoader().getResourceAsStream("/jspwiki.properties") );
+        props.load( TestEngine.findTestProperties() );
         PropertyConfigurator.configure(props);
     }
 
