@@ -1,3 +1,11 @@
+2003-01-19  Janne Jalkanen  <Janne.Jalkanen@nospam.ecyrd.com>
+
+        * Broke WikiPageProvider by adding deletePage() and
+        deleteVersion() methods.
+
+        * Fixed a multitude of bugs in the tests, courtesy of Torsten
+        Hildebrandt.  For example, "ant guitests" should work now.
+
 2003-01-17  Janne Jalkanen  <Janne.Jalkanen@nospam.ecyrd.com>
 
         * v2.0.17.
